<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_bg">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/svg_back_black_no_bg"
        android:layout_marginStart="12dp"
        android:layout_marginTop="62dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:src="@mipmap/app_logo"
            android:layout_marginTop="32dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/text_black"
            android:layout_marginTop="8dp"/>

        <LinearLayout
            android:id="@+id/verification_code_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="32dp">

            <EditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginHorizontal="12dp"
                android:background="@drawable/selector_dialog_them_bg"
                android:elevation="2dp"
                android:gravity="center_vertical"
                android:hint="@string/please_enter_your_phone_number"
                android:outlineSpotShadowColor="@color/text_gray"
                android:paddingLeft="16dp"
                android:singleLine="true"
                android:inputType="phone"
                android:digits="0123456789"
                android:maxLength="11"
                android:textColor="@color/text_black"
                android:textColorHint="@color/text_black_60"
                android:textSize="14sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="12dp">

                <EditText
                    android:id="@+id/et_verification_code"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:background="@drawable/selector_dialog_them_bg"
                    android:elevation="2dp"
                    android:gravity="center_vertical"
                    android:hint="@string/verification_code"
                    android:outlineSpotShadowColor="@color/text_gray"
                    android:paddingLeft="16dp"
                    android:singleLine="true"
                    android:inputType="number"
                    android:maxLength="6"
                    android:textColor="@color/text_black"
                    android:textColorHint="@color/text_black_60"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/get_verification_code_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/get_verification_code"
                    android:textColor="@color/text_black"
                    android:textSize="14sp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:elevation="4dp"
                    android:layout_marginEnd="16dp"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/verification_code_login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="14.5dp"
                android:background="@drawable/selector_theme_16_bg"
                android:text="@string/login"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:gravity="center_horizontal"
                android:layout_marginTop="48dp"
                android:layout_marginHorizontal="12dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="43dp"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="78dp"
                android:gravity="center">

                <CheckBox
                    android:id="@+id/check_verification_code_login_msg"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginEnd="4dp"
                    android:background="@drawable/item_check_box_bg_black"
                    android:button="@android:color/transparent" />

                <TextView
                    android:id="@+id/agree_agreement_2_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agree_agreement_2"
                    android:textSize="14sp"
                    android:textColor="@color/text_black_60" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>